fixed spacing issues, sorta. Added box shadows to buttons. Added dash and new line to chords you learned

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,9 @@ h1 {
 }
 h2{
   padding-top:1.6rem;
+  font-size: 1.6rem;
+  font-weight: 800;
+  font-family: monospace;
 
 }
 .goLeft{
@@ -40,23 +43,32 @@ h2{
   padding-bottom: 1.5rem;
 }
 .padUp{
-  padding-top: 1.5rem;
+  padding-top: 2.4rem;
 }
 .marginUp{
   margin-top: 2rem;
 
 }
+
  .rootDisplay p{
   font-size: 1.2rem;
   font-weight: 300;
+  font-family: monospace;
 }
 .rootDisplay{
-  /*display: flex;*/
   text-align: center;
   padding: .5rem;
   border: 1px solid #9899A6;
   margin-bottom: 1rem;
   border-radius: 5px;
+  background: rgba(132, 147, 116, .2);
+}
+#selectedChord{
+  font-size: 2rem;
+  font-weight: 600;
+  padding-top: 1rem;
+  text-align: center;
+
 }
 
 .justify{
@@ -79,16 +91,23 @@ li {
 
 
 /******    Dropdown    ********/
-
+button{
+  background-color: rgba(164, 170, 164, 1)
+}
+.btn{
+  margin-top: 1rem;
+  box-shadow:  0 1px 1px  0 black;
+}
 .dropdown-item{
   text-align: center;
 }
 .dropdown-content {
     visibility: visible;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: rgba(164, 170, 164, 1)
     text-align: center;
     min-width: 1rem;
+    max-width: 6rem;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -99,9 +118,17 @@ li {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    background-color: rgba(164, 170, 164, .8);
 }
 
-.dropdown a:hover {background-color: #f1f1f1}
+.dropdown a:hover {
+  background-color: #696770;
+  color: #fff;
+
+}
+#showChord{
+  margin-bottom: 1rem;
+}
 
 /*********  Chord Diagram   **********/
 
